# SuperLightTUI

./: .gitignore  AUDIT-REPORT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  HANDOFF.md  LICENSE  README.md  SECURITY.md  _typos 2.toml  _typos.toml  committed 2.toml  demo_fire.tape  demo_spreadsheet.tape  deny.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.sisyphus/: boulder.json
.sisyphus/notepads/slt-dx-strategy/: issues.md  learnings.md
.sisyphus/plans/: slt-dx-strategy.md
benches/: benchmarks.rs
crates/slt-wasm/: Cargo.toml
crates/slt-wasm/src/: lib.rs
docs/: ARCHITECTURE.md  COMPETITIVE_ANALYSIS.md  DESIGN_PRINCIPLES.md  README.es.md  README.ja.md  README.ko.md  README.zh-CN.md
examples/: anim.rs  async_demo.rs  counter.rs  debug_selection.rs  demo.rs  demo_cli.rs  demo_dashboard.rs  demo_fire.rs  demo_game.rs  demo_ime.rs  demo_infoviz.rs  demo_key_test.rs  demo_kitty_image.rs  demo_raw_draw.rs  demo_spreadsheet.rs  demo_table.rs  demo_tetris.rs  demo_trading.rs  demo_v050.rs  demo_website.rs  demo_wiki.rs  error_boundary_demo.rs  hello.rs  inline.rs  perf_interactive.rs  perf_regression.rs  test_mouse.rs
src/: anim.rs  buffer.rs  cell.rs  chart.rs  context.rs  event.rs  halfblock.rs  keymap.rs  layout.rs  lib.rs  palette.rs  rect.rs  sixel.rs  style.rs  syntax.rs  terminal.rs  test_utils.rs  widgets.rs
src/chart/: axis.rs  bar.rs  braille.rs  grid.rs  render.rs
src/context/: widgets_display.rs  widgets_input.rs  widgets_interactive.rs  widgets_viz.rs
src/context/widgets_interactive/: tree_widgets.rs
src/layout/: flexbox 2.rs  flexbox.rs  render.rs
src/style/: color.rs  theme.rs
src/terminal/: selection.rs
tests/: layout_proptest.rs  render_check.rs  run_static.rs  snapshots.rs  tooltip.rs  widgets.rs
tests/snapshots/: snapshots__snapshot_bordered_col.snap  snapshots__snapshot_button 2.snap  snapshots__snapshot_button.snap  snapshots__snapshot_calendar.snap  snapshots__snapshot_list.snap  snapshots__snapshot_progress.snap  snapshots__snapshot_row_layout.snap  snapshots__snapshot_separator.snap  snapshots__snapshot_table.snap  snapshots__snapshot_tabs.snap
