[package]
name = "superlighttui"
version = "0.4.1"
edition = "2021"
description = "Super Light TUI - A lightweight, ergonomic terminal UI library"
license = "MIT"
repository = "https://github.com/subinium/SuperLightTUI"
homepage = "https://github.com/subinium/SuperLightTUI"
documentation = "https://docs.rs/superlighttui"
readme = "README.md"
keywords = ["tui", "terminal", "cli", "ui", "immediate-mode"]
categories = ["command-line-interface"]
rust-version = "1.74"
exclude = ["examples/", ".github/"]

[lib]
name = "slt"

[dependencies]
crossterm = { version = "0.28", features = ["bracketed-paste"] }
unicode-width = "0.2"
tokio = { version = "1", features = ["rt", "sync", "macros", "time"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[features]
async = ["dep:tokio"]
serde = ["dep:serde"]

[[example]]
name = "hello"
path = "examples/hello.rs"

[[example]]
name = "counter"
path = "examples/counter.rs"

[[example]]
name = "demo"
path = "examples/demo.rs"

[[example]]
name = "anim"
path = "examples/anim.rs"

[[example]]
name = "inline"
path = "examples/inline.rs"

[[example]]
name = "async_demo"
path = "examples/async_demo.rs"
required-features = ["async"]

[[example]]
name = "demo_dashboard"
path = "examples/demo_dashboard.rs"

[[example]]
name = "demo_cli"
path = "examples/demo_cli.rs"

[[example]]
name = "demo_spreadsheet"
path = "examples/demo_spreadsheet.rs"

[[example]]
name = "demo_website"
path = "examples/demo_website.rs"

[[example]]
name = "demo_tetris"
path = "examples/demo_tetris.rs"

[[example]]
name = "demo_infoviz"
path = "examples/demo_infoviz.rs"

[[example]]
name = "test_mouse"
path = "examples/test_mouse.rs"

[[bench]]
name = "benchmarks"
harness = false
