[package]
name = "superlighttui"
version = "0.12.13"
edition = "2021"
description = "Super Light TUI - A lightweight, ergonomic terminal UI library"
license = "MIT"
repository = "https://github.com/subinium/SuperLightTUI"
homepage = "https://github.com/subinium/SuperLightTUI"
documentation = "https://docs.rs/superlighttui"
readme = "README.md"
keywords = ["tui", "terminal", "cli", "ui", "immediate-mode"]
categories = ["command-line-interface"]
rust-version = "1.81"
exclude = ["examples/", ".github/", "AUDIT-REPORT.md", "CLAUDE.md"]

[lib]
name = "slt"

[dependencies]
crossterm = { version = "0.28", features = ["bracketed-paste"] }
unicode-width = "0.2"
tokio = { version = "1", features = ["rt", "sync", "macros", "time"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
image = { version = "0.25", optional = true, default-features = false, features = ["png", "jpeg"] }
compact_str = { version = "0.9.0", default-features = false }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
insta = "1"

[features]
async = ["dep:tokio"]
serde = ["dep:serde"]
image = ["dep:image"]
full = ["async", "serde", "image"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[example]]
name = "hello"
path = "examples/hello.rs"

[[example]]
name = "counter"
path = "examples/counter.rs"

[[example]]
name = "demo"
path = "examples/demo.rs"

[[example]]
name = "anim"
path = "examples/anim.rs"

[[example]]
name = "inline"
path = "examples/inline.rs"

[[example]]
name = "async_demo"
path = "examples/async_demo.rs"
required-features = ["async"]

[[example]]
name = "demo_dashboard"
path = "examples/demo_dashboard.rs"

[[example]]
name = "demo_cli"
path = "examples/demo_cli.rs"

[[example]]
name = "demo_spreadsheet"
path = "examples/demo_spreadsheet.rs"

[[example]]
name = "demo_website"
path = "examples/demo_website.rs"

[[example]]
name = "demo_infoviz"
path = "examples/demo_infoviz.rs"

[[example]]
name = "demo_wiki"
path = "examples/demo_wiki.rs"

[[example]]
name = "demo_fire"
path = "examples/demo_fire.rs"

[[example]]
name = "demo_game"
path = "examples/demo_game.rs"

[[bench]]
name = "benchmarks"
harness = false
